--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -568,14 +568,6 @@ video {
   top: 0px;
 }
 
-.z-10 {
-  z-index: 10;
-}
-
-.z-30 {
-  z-index: 30;
-}
-
 .m-0 {
   margin: 0px;
 }
@@ -662,10 +654,6 @@ video {
   justify-content: space-between;
 }
 
-.gap-4 {
-  gap: 1rem;
-}
-
 .gap-x-20 {
   -moz-column-gap: 5rem;
        column-gap: 5rem;
@@ -704,10 +692,6 @@ video {
   border-width: 2.5px;
 }
 
-.border-none {
-  border-style: none;
-}
-
 .border-Grey\/40 {
   border-color: hsl(231 7% 60% / 0.4);
 }
@@ -722,21 +706,8 @@ video {
   background-color: hsl(0 0% 100% / var(--tw-bg-opacity));
 }
 
-.bg-blue-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
-}
-
-.bg-rgba {
-  background-color: rgba(0,0,0,0.5);
-}
-
 .fill-white {
   fill: #fff;
-}
-
-.p-0 {
-  padding: 0px;
 }
 
 .p-10 {
@@ -777,16 +748,6 @@ video {
   font-family: Roboto, sans-serif;
 }
 
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
 .text-6xl {
   font-size: 3.75rem;
   line-height: 1;
@@ -825,16 +786,6 @@ video {
   color: hsl(0 0% 100% / var(--tw-text-opacity));
 }
 
-.text-lightGreen {
-  --tw-text-opacity: 1;
-  color: rgb(3 207 180 / var(--tw-text-opacity));
-}
-
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
 .transition {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
@@ -846,4 +797,13 @@ video {
 .hover\:bg-Tomato:hover {
   --tw-bg-opacity: 1;
   background-color: hsl(4 100% 67% / var(--tw-bg-opacity));
+}
+
+.focus\:border-Grey\/40:focus {
+  border-color: hsl(231 7% 60% / 0.4);
+}
+
+.focus\:bg-white:focus {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
